--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,7 @@
-cramjam==2.9.1
-fastparquet==2024.11.0
-fsspec==2025.2.0
-joblib==1.4.2
+codecarbon==2.8.3
 numpy==2.2.2
-packaging==24.2
 pandas==2.2.3
-pyarrow==19.0.0
-python-dateutil==2.9.0.post0
-pytz==2025.1
 scikit-learn==1.6.1
+fastparquet==2024.11.0
+pyarrow==19.0.0
 scipy==1.15.1
-six==1.17.0
-threadpoolctl==3.5.0
-tzdata==2025.1
